--- a/styles.css
+++ b/styles.css
@@ -81,14 +81,6 @@ img {
     cursor: pointer;
 }
 
-.rock-user-selected {
-    border: 5px solid rgb(255, 255, 255);
-}
-
-.rock-comp-selected {
-    border: 5px solid rgb(242, 255, 0);
-}
-
 .paper {
     border: 5px double green;
     border-radius: 600px;
@@ -98,14 +90,6 @@ img {
 .paper:hover {
     box-shadow: inset 5px 5px 40px 20px rgba(0, 255, 64, 0.2);
     cursor: pointer;
-}
-
-.paper-user-selected {
-    border: 5px solid rgb(255, 255, 255);
-}
-
-.paper-comp-selected {
-    border: 5px solid rgb(242, 255, 0);
 }
 
 .scissors {
@@ -119,14 +103,6 @@ img {
     cursor: pointer;
 }
 
-.scissors-user-selected {
-    border: 5px solid rgb(255, 255, 255);
-}
-
-.scissors-comp-selected {
-    border: 5px solid rgb(242, 255, 0);
-}
-
 .action-msg {
     font-size: 2.5rem;
     text-align: center;
@@ -134,4 +110,12 @@ img {
 
 .disable-click {
     pointer-events: none;
+}
+
+.user-selected {
+    border: 5px solid rgb(255, 255, 255);
+}
+
+.comp-selected {
+    border: 5px solid rgb(242, 255, 0);
 }
